--- a/Dockerfile.2.12
+++ b/Dockerfile.2.12
@@ -1,3 +1,4 @@
+
 FROM ubuntu:trusty
 
 MAINTAINER yangsbj@cn.ibm.com
@@ -37,6 +38,7 @@ RUN apt-get update && apt-get install -y \
             chmod +x /sbin/stop; \
             [ -e "/etc/ssh/sshd_config" ] \
             && sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config ;\
+            sed -i 's/#UseDNS yes/UseDNS no/' /etc/ssh/sshd_config ;\            
             echo "root:cluster" | chpasswd ; \
             touch /etc/NEEDINIT 
     
