--- a/Dockerfile.50fa1
+++ b/Dockerfile.50fa1
@@ -1,46 +1,41 @@
+FROM centos:7.3.1611
 
-FROM ubuntu:trusty
+MAINTAINER drdukes@gmail.com
 
-MAINTAINER yangsbj@cn.ibm.com
+VOLUME ["/install","/var/log/xcat/","/sys/fs/cgroup"]
 
-ENV xcatcoreurl "http://xcat.org/files/xcat/repos/apt/2.12/xcat-core trusty main "
-ENV xcatdepurl  "http://xcat.org/files/xcat/repos/apt/xcat-dep trusty main"
-
-VOLUME ["/install", "/var/log/xcat/"]
-COPY startservice.sh /bin/startservice.sh 
+COPY startservice-centos.sh /bin/startservice.sh 
 COPY patch.bin.stop /sbin/stop
 COPY motd /etc/motd
 
-RUN apt-get update && apt-get install -y \
-            wget \
-            openssh-server ; \  
-            wget -O - \
-            "http://sourceforge.net/projects/xcat/files/ubuntu/apt.key/download" \
-            | apt-key add - ; \
-            echo  \
-            "deb ${xcatcoreurl}" \    
-             > /etc/apt/sources.list.d/xcat-core.list ; \
-            echo \
-            "deb ${xcatdepurl}"  \
-            > /etc/apt/sources.list.d/xcat-dep.list ; \
-            apt-get update && apt-get -y install \
-            xcat \
-            && apt-get clean \ 
-            && rm -rf /var/lib/apt/lists/*; \
-            cp -rf  /install/postscripts  /opt/xcat/ \
-            && rm -rf /install/postscripts ; \
-            cp -rf  /install/prescripts  /opt/xcat/ \
-            && rm -rf /install/prescripts; \
-            service xcatd stop  ; \
-            sudo a2enmod ssl; \
-            ln -s ../sites-available/default-ssl.conf  /etc/apache2/sites-enabled/ssl.conf; \
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == \
+        systemd-tmpfiles-setup.service ] || rm -f $i; done); \
+        rm -f /lib/systemd/system/multi-user.target.wants/*;\
+        rm -f /etc/systemd/system/*.wants/*;\
+        rm -f /lib/systemd/system/local-fs.target.wants/*; \
+        rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
+        rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
+        rm -f /lib/systemd/system/basic.target.wants:/*;\
+        rm -f /lib/systemd/system/anaconda.target.wants/*;
+
+RUN yum clean all && yum install -y \
+	    iproute \
+            less \
+            openssh-server \
+	    rsyslog \
+            wget; \
+	    wget -O - \
+            "https://raw.githubusercontent.com/xcat2/xcat-core/master/xCAT-server/share/xcat/tools/go-xcat" \
+            >/tmp/go-xcat ; \
+            chmod +x /tmp/go-xcat ; \
+            /tmp/go-xcat --yes install ; \
             chmod +x /bin/startservice.sh; \
             chmod +x /sbin/stop; \
             [ -e "/etc/ssh/sshd_config" ] \
             && sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config ;\
-            sed -i 's/#UseDNS yes/UseDNS no/' /etc/ssh/sshd_config ;\            
-            echo "root:cluster" | chpasswd ; \
-            touch /etc/NEEDINIT 
-    
+            sed -i 's/#UseDNS yes/UseDNS no/' /etc/ssh/sshd_config ;\
+            echo "root:cluster" | chpasswd \
+            touch /etc/NEEDINIT
 
-ENTRYPOINT ["/bin/startservice.sh"]
+CMD ["/usr/sbin/init","/bin/startservice.sh"]
+ENTRYPOINT [ "sh", "-c" ]
