--- a/Dockerfile.50fa1
+++ b/Dockerfile.50fa1
@@ -1,9 +1,11 @@
+
 FROM centos:7.3.1611
 
 MAINTAINER drdukes@gmail.com
 
 VOLUME ["/install","/var/log/xcat/","/sys/fs/cgroup"]
 
+ENV container docker
 COPY startservice-centos.sh /bin/startservice.sh 
 COPY patch.bin.stop /sbin/stop
 COPY motd /etc/motd
