--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,12 @@
-version: '2'
+version: '3.2'
 
 services:
   xcatmn:
     #the xCAT docker image name and tag, with format [xCAT docker image name]:[tag]
-    image: schwarzwald/xcat-docker:latest 
-    #container name, seen by Docker host
-    container_name: xcatmn
-    #the hostname of the container, seen by container itself 
-    hostname: xcatmn
-    #previleged mode
-    privileged: true
+    image: schwarzwald/xcat-docker
+    #Needed to run as systemd service. Otherwise will freeze upon startup.
+    cap_add:
+      - SYS_ADMIN
     #tty enable
     tty: true
     #stdin enable
@@ -24,7 +21,7 @@ services:
       #the service network, connecting to the hardware control point of the cluster
       svcnet:
         #the IP address of container in service network
-        ipv4_address : 192.168.0.101
+        ipv4_address : 192.160.0.101
       #the management network, connecting to the compute nodes in the cluster
       mgtnet:
         #the IP address of container in management network
@@ -33,22 +30,23 @@ services:
     volumes:
       #the "/install" volume is used to keep user data in xCAT,
       #such as osimage resources
-      - /docker/xcatdata/:/install
+      - xcat-install:/install
       #the "/.dbbackup" volume is used to backup and restore xCAT DB tables
       #Dockerized xCAT will restore xCAT DB tables if specified
       #"dumpxCATdb -p /.dbbackup" should be run manually to save xCAT DB inside container
-      - /docker/xcatdata/.dbbackup:/.dbbackup
+      - xcat-dbbackup:/.dbbackup
       #the "/var/log/xcat/" volume is used to keep xCAT logs
-      - /docker/xcatdata/.logs:/var/log/xcat/
+      - xcat-logs:/var/log/xcat/
+      #tftpboot generated files
+      - xcat-tftpboot:/tftpboot
+
+volumes:
+  xcat-install:
+  xcat-dbbackup:
+  xcat-logs:
+  xcat-tftpboot:
 
 networks:
-   
-  #externalnet:
-  #  external:
-  #    name: mgtnet
-  
-  #management network, attached to the network interface on Docker host 
-  #facing the nodes to provision
   mgtnet:
     driver: "bridge"
     driver_opts: 
@@ -59,12 +57,7 @@ networks:
           #the subnet of the bridge network in CIDR format
           #should be exactly the same as the network configuration of network interface 
           #attached to the bridge
-        - subnet: 10.5.107.0/8
-          #the IP address of the bridge, should be exactly the same as the IP address of 
-          #network interface attached to the bridge
-          gateway: 10.5.107.1
-          #aux_addresses:
-          #   DefaultGatewayIPv4: 10.0.0.103
+        - subnet: 10.5.107.0/24
     
   #service network, attached to the network interface on
   #Docker host facing the bmc network
@@ -79,9 +72,4 @@ networks:
           #the subnet of the bridge network in CIDR format
           #should be exactly the same as the network configuration of network interface 
           #attached to the bridge
-        - subnet: 192.168.0.0/8
-          #the IP address of the bridge, should be exactly the same as the IP address of 
-          #network interface attached to the bridge
-          gateway: 192.168.0.100
-          #aux_addresses:
-          #   DefaultGatewayIPv4: 10.5.107.1
+        - subnet: 192.160.0.0/24
